2004-04-08  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-06  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: several fixes for gentoo, such as gateway 
	  setting fixes for gentoo, adding control for starting or 
	  stopping samba service and avoiding the silly creation of 
	  /etc/conf.d/net.$dev file

2004-04-05  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service-list.pl.in: added descriptions for "joystick", "acpid" and
	  "ntpdate" from John Spray <jcs116@york.ac.uk>

2004-04-05  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* file.pl.in (gst_file_copy): added
	* service.pl.in (gst_service_gentoo_get_service_status): added.
	  (gst_service_gentoo_set_status): added a $force var for 
	  forcing the starting or stopping of the service
	* time-conf.in: updated gst_service_gentoo_set_status() use
	* network.pl.in: added PPP support for gentoo

2004-04-04  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2004-04-03  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service.pl.in (gst_service_gentoo_installed) 
	  (gst_service_gentoo_set_status): added
	* time-conf.in: added full service for gentoo

2004-04-02  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service.pl.in, services-conf.in: added --set for gentoo init,
	  all the gentoo modifications in the services tool has been 
	  made with collaboration from Eduardo Garcia Cebollero 
	  <kiwnix@yahoo.es>

2004-04-02  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service-list.pl.in: replaced the forbidden services hash with
	  a forbidden services list. added regexp search capabilities to 
	  such list. Added some gentoo forbidden services too
	* service.pl.in: added gentoo support for reading config, 
	  guessing a service status and running/stopping a service
	* services-conf.in: added support for gentoo

2004-03-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>
