@@ -44,7 +44,8 @@ sub gst_service_list_get_info
     "chargen-udp"       =>      [ "", _("An xinetd internal service which generate characters. The xinetd internal service which continuously generates characters until the connection is dropped.  This is the udp version. You must enable xinetd to use this service.") ],
 		"cron"              =>	[ _("daemon to execute scheduled commands"), "" ],
     "crond"             =>      [ _("Run scheduled jobs"), _("cron is a standard UNIX program that runs user-specified programs at periodic scheduled times. vixie cron adds a number of features to the basic UNIX cron, including better security and more powerful configuration options.") ],
-		"cupsys"            =>	[ _("Common Unix Printing System"), "" ],
+    "cupsd"             =>  [ _("Common Unix Printing System"), _("Printing system based upon the Internet Printing Protocol, version  1.1") ],
+		"cupsys"            =>	[ _("Common Unix Printing System"), _("Printing system based upon the Internet Printing Protocol, version  1.1") ],
     "daytime"           =>      [ "", _("An internal xinetd service which gets the current system time then prints it out in a format like this: 'Wed Nov 13 22:30:27 EST 2002'.  This is the tcp version. You must enable xinetd to use this service.") ],
     "daytime-udp"   =>      [ "", _("An internal xinetd service which gets the current system time then prints it out in a format like this: 'Wed Nov 13 22:30:27 EST 2002'.  This is the udp version. You must enable xinetd to use this service.") ],
     "ddclient"      =>      [ _("Dynamic DNS Client"), _("A Dynamic DNS Name service from www.dyndns.org") ],
@@ -52,6 +53,7 @@ sub gst_service_list_get_info
     "dictd"         =>      [ _("Dict Dictionary Server"), _("Dict Dictionary Server") ],
     "echo"              =>      [ "", _("An xinetd internal service which echo's characters back to clients.  This is the tcp version. You must enable xinetd to use this service.") ],
     "echo-udp"          =>      [ "", _("An xinetd internal service which echo's characters back to clients.  This is the udp version. You must enable xinetd to use this service.") ],
+    "esound"            =>  [ _("Sound mixing server"), _("The Enlightened Sound Daemon") ],
     "exim"              =>      [ _("Exim SMTP Server"), _("Exim SMTP Server") ],
     "fam"               =>  [ _("file alteration monitor"), "" ],
     "firstboot"         =>      [ "", _("Firstboot is a druid style program that runs on the first time") ],
@@ -59,6 +61,8 @@ sub gst_service_list_get_info
     "freenet6"          =>  [ _("IPv6 Tunnel Broker"), _("A IPv6 Dynamic Tunnel Broker") ],
     "gdm"               =>	[ _("GNOME Display Manager"), _("gdm provides the GNOME equivalent of a \"login:\" prompt.") ],
     "gpm"                   =>      [ _("console mouse support"), _("GPM adds mouse support to text-based Linux applications such the Midnight Commander. It also allows mouse-based console cut-and-paste operations, and includes support for pop-up menus on the console.") ],
+    "hdparm"            =>  [ _("Set hard disk parameters"), _("Provides a interface to various hard disk ioctls supported by the stock Linux ATA/IDE device driver subsystem.") ],
+    "hotplug"           =>  [ _("Linux hotplugging support"), _("hotplug is a program which is used by the kernel to notify user mode software when some significant (usually hardware-related) events take place. An example is when a USB or Cardbus device has just been plugged in.") ],
     "httpd"             =>      [ _("web server"), _("Apache is a World Wide Web server.  It is used to serve HTML files and CGI.") ],
 		"inetd"             =>	[ _("internet superserver"), _("inetd allows running one daemon to invoke several others, reducing load on the system.") ],
 		"iptables"          =>	[ _("administration tool for IPv4 packet filtering and NAT"), _("Iptables is used to set up, maintain, and inspect the tables of IP packet filter rules in the Linux kernel.") ],
@@ -67,20 +71,25 @@ sub gst_service_list_get_info
     "isdn"              =>      [ "", _("start and stop ISDN services") ],
     "joystick"          =>  [ _("Check and fix joystick device nodes"), _("Runs joystick-device-check.  joystick-device-check is a program which ensures that the /dev/js* device nodes are correct for the kernel version in use.") ],
     "keytable"          =>      [ "", _("This package loads the selected keyboard map as set in /etc/sysconfig/keyboard.  This can be selected using the kbdconfig utility.  You should leave this enabled for most machines.") ],
-		"klogd"             =>	[ ("Kernel Log Daemon"), _("klogd is a system daemon which intercepts and logs Linux kernel messages.") ],
+		"klogd"             =>	[ _("Kernel Log Daemon"), _("klogd is a system daemon which intercepts and logs Linux kernel messages.") ],
     "kudzu"             =>      [ "", _("This runs the hardware probe, and optionally configures changed hardware.") ],
     "lircd"             =>      [ "", _("LIRC is a package that allows you to decode and send infra-red signals of many commonly used remote controls") ],
     "lircmd"            =>      [ "", _("LIRC is a package that allows you to decode and send infra-red signals of many commonly used remote controls") ],
+    "local"             =>  [ _("Starts misc programs that should be started"), "" ],
     "lpd"               =>      [ "", _("lpd is the print daemon required for lpr to work properly. It is basically a server that arbitrates print jobs to printer(s).") ],
     "metalog"           =>      [ _("Syslog Replacement"), _("Modern logging daemon") ],
+    "modules"           =>      [ _("Load kernel modules"), "" ],
     "module-init-tools" =>      [ _("tools for managing Linux kernel modules"), _("tools for managing Linux kernel modules") ],
+    "mysql"             =>      [ _("database server"), _("MySQL, a SQL-based relational database daemon") ],
     "named"             =>      [ _("dns server"), _("named (BIND) is a Domain Name Server (DNS) that is used to resolve host names to IP addresses.") ],
     "netfs"             =>      [ "", _("Mounts and unmounts all Network File System (NFS), SMB (Lan Manager/Windows), and NCP (NetWare) mount points.") ],
     "network"           =>      [ "", _("Activates/Deactivates all network interfaces configured to start at boot time.") ],
     "nfs"               =>      [ "", _("NFS is a popular protocol for file sharing across TCP/IP networks. This service provides NFS server functionality, which is configured via the /etc/exports file.") ],
     "nfslock"           =>      [ "", _("NFS is a popular protocol for file sharing across TCP/IP networks. This service provides NFS file locking functionality.") ],
-    "ntpd"              =>      [ "", _("ntpd is the NTPv4 daemon.") ],
+    "nscd"              =>  [ _("Name service cache daemon"), _("Daemon that provides a cache for the most common name service requests.") ],
+    "ntpd"              =>      [ _("Network Time Protocol daemon"), _("ntpd is the NTPv4 daemon.") ],
     "ntpdate"           =>      [ _("Update the system time over the network"), _("Checks the time from a Network Time Protocol (ntp) server and adjusts the system time accordingly.") ],
+    "ntp-client"        =>  [ _("Update the system time over the network"), _("Checks the time from a Network Time Protocol (ntp) server and adjusts the system time accordingly.") ],
     "oops"              =>      [ _("HTTP caching proxy"), _("HTTP caching proxy") ],
     "pcmcia"            =>      [ _("PCMCIA Services"), _("PCMCIA Services") ],
     "pdnsd"             =>      [ _("Caching-Only DNS Server"), _("Caching-Only DNS Server") ],
@@ -94,6 +103,8 @@ sub gst_service_list_get_info
     "rawdevices"        =>      [ "", _("This scripts assignes raw devices to block devices (such as hard drive partitions). This is for the use of applications such as Oracle. You can set up the raw device to block device mapping by editing the file /etc/sysconfig/rawdevices.") ],
     "rhnsd"             =>      [ "", _("This is a daemon which handles the task of connecting periodically to the Red Hat Network servers to check for updates, notifications and perform system monitoring tasks according to the service level that this server is subscribed for.") ],
     "rsync"             =>      [ "", _("The rsync server is a good addition to am ftp server, as it allows crc checksumming etc. You must enable xinetd to use this service.") ],
+    "rsyncd"            =>  [ _("Faster, flexible replacement for rcp"), _("The rsync server is a good addition to am ftp server, as it allows crc checksumming etc. You must enable xinetd to use this service.") ],
+    "samba"             =>  [ _("A Windows SMB/CIFS fileserver for UNIX"), _("The Samba software suite is a collection of programs that implements the Server Message Block protocol for UNIX systems.") ],
     "saslauthd"         =>      [ "", _("saslauthd is a server process which handles plaintext authentication requests on behalf of the cyrus-sasl library.") ],
     "sendmail"          =>      [ "", _("Sendmail is a Mail Transport Agent, which is the program that moves mail from one machine to another.") ],
     "servers"           =>      [ "", _("An internal xinetd service, listing active servers. You must enable xinetd to use this service.") ],
@@ -110,10 +121,12 @@ sub gst_service_list_get_info
     "time"              =>      [ "", _("An RFC 868 time server. This protocol provides a site-independent, machine readable date and time. The Time service sends back to the originating source the time in seconds since midnight on January first 1900.  This is the tcp version. You must enable xinetd to use this service.") ],
     "time-udp"          =>      [ "", _("An RFC 868 time server. This protocol provides a site-independent, machine readable date and time. The Time service sends back to the originating source the time in seconds since midnight on January first 1900.  This is the udp version. You must enable xinetd to use this service.") ],
 		"urandom"           =>	[ _("kernel random number source devices"), _("The  random  number  generator  gathers environmental noise from device drivers and other sources into an entropy pool. From this entropy pool random numbers are created.") ],
+		"vcron"             =>	[ _("daemon to execute scheduled commands"), "" ],
     "vmware"            =>  [ _("Intel(TM) x86(TM)-based virtual machine"), _("The vmware command starts an Intel X86-based virtual machine. This script manages the services needed to run VMware software.") ],
     "webmin"            =>  [ _("Web-based administration toolkit"), _("Web-based administration toolkit") ],
-    "winbind"           =>      [ "", _("Starts and stops the Samba winbind daemon") ],
+    "winbind"           =>      [ _("Name Service Switch daemon for resolving names from NT servers"), _("Starts and stops the Samba winbind daemon") ],
     "wine"              =>      [ "", _("Allow users to run Windows(tm) applications by just clicking on them (or typing ./file.exe)") ],
+    "xdm"               =>  [ _("X Display Manager"), _("Provides the X equivalent of a \"login:\" prompt.") ],
     "xfs"               =>	[ _("X font server"), _("Xfs is the X Window System font server. It supplies fonts to X Window System display servers.") ],
     "xinetd"            =>      [ "", _("xinetd is a powerful replacement for inetd. xinetd has access control machanisms, extensive logging capabilities, the ability to make services available based on time, and can place limits on the number of servers that can be started, among other things.") ]
 	);
@@ -164,13 +177,27 @@ sub gst_service_list_service_is_forbidden
      # this shouldn't be shown in slackware
      "inet2",
      # those were found in gentoo
+     "bootmisc",
+     "checkfs",
+     "checkroot",
+     "clock",
+     "consolefont",
+     "crypto-loop",
+     "domainname",
+     "hostname",
+     "keymaps",
+     "localmount",
      "net\..*",
+     "numlock",
      "depscan\.sh",
      "functions\.sh",
      "halt\.sh",
      "reboot\.sh",
+     "rmnologin",
      "runscript\.sh",
-     "shutdown\.sh"
+     "serial",
+     "shutdown\.sh",
+     "switch"
     ];
 
   foreach $i (@$service_forbidden_list)
